--- a/config.json
+++ b/config.json
@@ -2,11 +2,19 @@
     "title":"XLX的博客",
     "subTitle":"紧急换电缆，循环追捕令",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
-    "GMEEK_VERSION":"last"
+    "GMEEK_VERSION":"last",
     "displayTitle":"XLX的博客",
+    //"homeUrl":"http://blog.meekdai.com",
+    //"faviconUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "email":"xulixiaoxjtu@qq.com",
+    //"startSite":"02/16/2015",
+    //"filingNum":"浙ICP备20023628号",
     "onePageListNum":20,
     "singlePage":["about"],
+    //"iconList":{"music":"M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13Z"},
+    //"exlink":{"music":"https://music.meekdai.com"},
+    //"commentLabelColor":"#006b75",
+    //"yearColorList":["#bc4c00", "#0969da", "#1f883d", "#A333D0"],
     "i18n":"CN",
     "UTC":8,
     "themeMode":"manual",
@@ -14,12 +22,15 @@
     "nightTheme":"dark_colorblind",
     "urlMode":"pinyin",
     "style":"",
-    "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekTOC.js'></script><script src='https://blog.meekdai.com/Gmeek/plugins/lightbox.js'></script>", 
+    "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekTOC.js'></script><script src='https://blog.meekdai.com/Gmeek/plugins/lightbox.js'></script>", //enable TOC and lightbox
     "head":"",
-    "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekBSZ.js'></script>", 
+    "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekBSZ.js'></script>", // 不蒜子
     "indexStyle":"",
     "indexScript":"",
     "showPostSource":1,
     "rssSplit":"sentence",
     "bottomText":"请随意转载",
+    //"ogImage":"https://cdn.jsdelivr.net/gh/Meekdai/meekdai.github.io/logo64.jpg",
+    //"primerCSS":"<link href='https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/Primer/21.0.7/primer.css' rel='stylesheet' />",
+    //"needComment":0,
 }
