--- a/config.json
+++ b/config.json
@@ -21,5 +21,5 @@
     "indexScript":"",
     "showPostSource":1,
     "rssSplit":"sentence",
-    "bottomText":"请随意转载",
+    "bottomText":"请随意转载"
 }
